# esp32_usb_ip

./: .gitignore  README.md  sdkconfig  sdkconfig.defaults.esp32p4  sdkconfig.defaults.esp32s3
components/board_utils/: CMakeLists.txt  idf_component.yml
components/board_utils/include/: gpio_tcp_server.h  pin_define.h  wifi_manager.h
components/board_utils/src/: gpio_tcp_server.c  wifi_manager.c
components/usbipdcpp/: CMakeLists.txt  idf_component.yml
components/usbipdcpp/include/esp32_handler/: Esp32DeviceHandler.h
components/usbipdcpp/src/esp32_handler/: Esp32DeviceHandler.cpp  tools.cpp
components/usbipdcpp/usbipdcpp/: .clang-format  .gitignore  CMakeLists.txt  README-zh.md  README.md  conanfile.txt
components/usbipdcpp/usbipdcpp/bindings/: CMakeLists.txt  device.cpp  endpoint.cpp  enums.cpp  interface.cpp  module.cpp  server.cpp  session.cpp  string_pool.cpp  virtual_device.cpp
components/usbipdcpp/usbipdcpp/bindings/devices/: absolute_mouse.cpp
components/usbipdcpp/usbipdcpp/cmake/: usbipdcppConfig.cmake.in
components/usbipdcpp/usbipdcpp/examples/: libusb_server.cpp  termux_libusb_server.cpp
components/usbipdcpp/usbipdcpp/examples/absolute_mouse/: absolute_mouse_main.cpp
components/usbipdcpp/usbipdcpp/examples/libevdev_mouse/: Mouse.cpp  libevdev_mouse.cpp  libevdev_mouse.h  libevdev_mouse_main.cpp
components/usbipdcpp/usbipdcpp/examples/mock_cdc_acm/: mock_cdc_acm.cpp  mock_cdc_acm.h  mock_cdc_acm_main.cpp
components/usbipdcpp/usbipdcpp/examples/mock_keyboard/: mock_keyboard.cpp  mock_keyboard.h  mock_keyboard_main.cpp
components/usbipdcpp/usbipdcpp/examples/mock_mouse/: mock_mouse.cpp  mock_mouse.h  mock_mouse_main.cpp
components/usbipdcpp/usbipdcpp/examples/mock_msc/: mock_msc_main.cpp
components/usbipdcpp/usbipdcpp/examples/multi_devices/: device_factory.cpp  device_factory.h  main.cpp  simple_device.cpp  simple_device.h
components/usbipdcpp/usbipdcpp/examples/python/: flip_left_button.py  test_absolute_mouse.py
components/usbipdcpp/usbipdcpp/include/: Device.h  Endpoint.h  Export.h  Interface.h  Server.h  Session.h  SetupPacket.h  Version.h  constant.h  network.h  protocol.h  type.h  usbipdcpp.h  usbipdcpp_core.h  usbipdcpp_libusb.h  usbipdcpp_virtual_device.h
components/usbipdcpp/usbipdcpp/include/DeviceHandler/: DeviceHandler.h
components/usbipdcpp/usbipdcpp/include/InterfaceHandler/: InterfaceHandler.h
components/usbipdcpp/usbipdcpp/include/LibusbHandler/: LibusbDeviceHandler.h  LibusbServer.h  tools.h
components/usbipdcpp/usbipdcpp/include/utils/: LatencyTracker.h  ObjectPool.h  ReuseMap.h  ReuseSet.h  RingBuffer.h  SmallVector.h  StringPool.h  utils.h
components/usbipdcpp/usbipdcpp/include/virtual_device/: CdcAcmConstants.h  CdcAcmVirtualInterfaceHandler.h  HidConstants.h  HidVirtualInterfaceHandler.h  MscConstants.h  SimpleVirtualDeviceHandler.h  VirtualDeviceHandler.h  VirtualInterfaceHandler.h
components/usbipdcpp/usbipdcpp/src/: Device.cpp  Interface.cpp  Server.cpp  Session.cpp  protocol.cpp
components/usbipdcpp/usbipdcpp/src/DeviceHandler/: DeviceHandler.cpp
components/usbipdcpp/usbipdcpp/src/InterfaceHandler/: InterfaceHandler.cpp
components/usbipdcpp/usbipdcpp/src/LibusbHandler/: LibusbDeviceHandler.cpp  LibusbServer.cpp  tools.cpp
components/usbipdcpp/usbipdcpp/src/utils/: RingBuffer.cpp
components/usbipdcpp/usbipdcpp/src/virtual_device/: CdcAcmVirtualInterfaceHandler.cpp  HidVirtualInterfaceHandler.cpp  SimpleVirtualDeviceHandler.cpp  VirtualDeviceHandler.cpp  VirtualInterfaceHandler.cpp
components/usbipdcpp/usbipdcpp/tests/: test_generic_transfer.cpp  test_network.cpp  test_object_pool.cpp  test_reuse_map.cpp  test_reuse_set.cpp  test_setup_packet.cpp  test_small_vector.cpp  test_stringpool.cpp  test_transfer_handle.cpp  test_usb_device.cpp  test_usbip_response.cpp  test_utils.h
components/usbipdcpp/usbipdcpp/tests/test_protocol/: test_protocol.cpp  test_protocol_compatibility.cpp
main/: CMakeLists.txt  Kconfig.projbuild  board.cpp  board.h  idf_component.yml  main.cpp
spec/AI2AI/: 协议和数据.md  架构信息.md
(+8 files in other folders)
